fixed bug where phone form kept overflowing

--- a/src/App/AppBody/AppBody.scss
+++ b/src/App/AppBody/AppBody.scss
@@ -2,6 +2,7 @@
     background: #ecf0f1;
     display: flex;
     height: 100%;
+    overflow: auto;
 
     .app-body-content-container{
         margin: 1em;
